# unalz-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: specification.md
src/: archive.rs  crypto.rs  dostime.rs  encoding.rs  error.rs  extract.rs  lib.rs  main.rs  multivolume.rs
src/decompress/: bzip2.rs  deflate.rs  mod.rs  raw.rs
tests/: integration.rs  testdata.rs
