[package]
name = "unalz-rs"
version = "0.2.0"
edition = "2024"
description = "ALZ archive extractor"
license = "BSD-2-Clause"
repository = "https://github.com/OctopusET/unalz-rs"
readme = "README.md"
keywords = ["alz", "archive", "extractor", "alzip", "unalz"]
categories = ["compression", "command-line-utilities"]

[lib]
name = "unalz_rs"
path = "src/lib.rs"

[[bin]]
name = "unalz"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
flate2 = "1"
crc32fast = "1"
encoding_rs = "0.8"
filetime = "0.2"

